openmetadata/om-proxy-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: openmetadata-proxy
  namespace: default
spec:
  type: ExternalName
  externalName: openmetadata.openmetadata.svc.cluster.local
  ports:
  - port: 8585
    targetPort: 8585
